_logs/polly/gcc-7-cxx17-pic/log-2.txt
Execute command: [
  `which`
  `cmake`
]
[/home/vagrant/Labs/lab-11-process]> "which" "cmake"
/usr/bin/cmake
Execute command: [
  `cmake`
  `--version`
]
[/home/vagrant/Labs/lab-11-process]> "cmake" "--version"
cmake version 3.10.2

CMake suite maintained and supported by Kitware (kitware.com/cmake).
Execute command: [
  `cmake`
  `-H.`
  `-B/home/vagrant/Labs/lab-11-process/_builds/gcc-7-cxx17-pic-Debug`
  `-DCMAKE_BUILD_TYPE=Debug`
  `-GUnix Makefiles`
  `-DCMAKE_TOOLCHAIN_FILE=/home/vagrant/Labs/lab-11-process/tools/polly/gcc-7-cxx17-pic.cmake`
  `-DCMAKE_EXE_LINKER=-fuse-ld=gold`
  `-DHUNTER_CONFIGURATION_TYPES=Debug`
]
[/home/vagrant/Labs/lab-11-process]> "cmake" "-H." "-B/home/vagrant/Labs/lab-11-process/_builds/gcc-7-cxx17-pic-Debug" "-DCMAKE_BUILD_TYPE=Debug" "-GUnix Makefiles" "-DCMAKE_TOOLCHAIN_FILE=/home/vagrant/Labs/lab-11-process/tools/polly/gcc-7-cxx17-pic.cmake" "-DCMAKE_EXE_LINKER=-fuse-ld=gold" "-DHUNTER_CONFIGURATION_TYPES=Debug"
-- [polly] Used toolchain: gcc 7 / c++17 support / PIC
-- [hunter] Calculating Toolchain-SHA1
-- [hunter] Calculating Config-SHA1
-- [hunter] HUNTER_ROOT: /home/vagrant/.hunter
-- [hunter] [ Hunter-ID: 70287b1 | Toolchain-ID: fc9dcb2 | Config-ID: dffbc08 ]
-- [hunter] GTEST_ROOT: /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.8.0-hunter-p11)
-- [hunter] BOOSTPROCESS_ROOT: /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 0.5)
-- Boost version: 1.68.0
-- Found the following Boost libraries:
--   system
--   filesystem
--   iostreams
-- [hunter] ASYNC++_ROOT: /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 0.0.3-hunter)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vagrant/Labs/lab-11-process/_builds/gcc-7-cxx17-pic-Debug
Execute command: [
  `cmake`
  `--build`
  `/home/vagrant/Labs/lab-11-process/_builds/gcc-7-cxx17-pic-Debug`
  `--config`
  `Debug`
  `--`
]
[/home/vagrant/Labs/lab-11-process]> "cmake" "--build" "/home/vagrant/Labs/lab-11-process/_builds/gcc-7-cxx17-pic-Debug" "--config" "Debug" "--"
Scanning dependencies of target builder
[ 16%] Building CXX object CMakeFiles/builder.dir/sources/builder.cpp.o
/home/vagrant/Labs/lab-11-process/sources/builder.cpp: In constructor ‘Builder::Builder()’:
/home/vagrant/Labs/lab-11-process/sources/builder.cpp:13:11: error: ‘set_args’ was not declared in this scope
   execute(set_args(args));
           ^~~~~~~~
/home/vagrant/Labs/lab-11-process/sources/builder.cpp:13:11: note: suggested alternatives:
In file included from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/posix/initializers.hpp:32:0,
                 from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/initializers.hpp:21,
                 from /home/vagrant/Labs/lab-11-process/sources/builder.cpp:5:
/home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/posix/initializers/set_args.hpp:50:18: note:   ‘boost::process::posix::initializers::set_args’
 set_args_<Range> set_args(const Range &range)
                  ^~~~~~~~
/home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/posix/initializers/set_args.hpp:50:18: note:   ‘boost::process::posix::initializers::set_args’
/home/vagrant/Labs/lab-11-process/sources/builder.cpp:13:3: error: ‘execute’ was not declared in this scope
   execute(set_args(args));
   ^~~~~~~
/home/vagrant/Labs/lab-11-process/sources/builder.cpp:13:3: note: suggested alternatives:
In file included from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/execute.hpp:21:0,
                 from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/all.hpp:21,
                 from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process.hpp:20,
                 from /home/vagrant/Labs/lab-11-process/sources/builder.cpp:6:
/home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/posix/execute.hpp:21:7: note:   ‘boost::process::posix::execute’
 child execute(const I0 &i0)
       ^~~~~~~
In file included from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/execute.hpp:21:0,
                 from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/all.hpp:21,
                 from /home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process.hpp:20,
                 from /home/vagrant/Labs/lab-11-process/sources/builder.cpp:6:
/home/vagrant/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install/include/boost/process/posix/execute.hpp:75:7: note:   ‘boost::process::posix::execute’
 child execute(const I0 &i0, const I1 &i1, const I2 &i2, const I3 &i3, const I4 &i4, const I5 &i5, const I6 &i6, const I7 &i7, const I8 &i8, const I9 &i9)
       ^~~~~~~
At global scope:
cc1plus: error: unrecognized command line option ‘-Wno-unused-command-line-argument’ [-Werror]
cc1plus: all warnings being treated as errors
make[2]: *** [CMakeFiles/builder.dir/sources/builder.cpp.o] Error 1
CMakeFiles/builder.dir/build.make:62: recipe for target 'CMakeFiles/builder.dir/sources/builder.cpp.o' failed
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/builder.dir/all' failed
make[1]: *** [CMakeFiles/builder.dir/all] Error 2
make: *** [all] Error 2
Makefile:94: recipe for target 'all' failed
